[package]
name = "providence"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
base64 = "0.13"
serde = "1"
serde_derive = "1"
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = { version = "0.4", features = ["serde"] }
simple_endian = "0.2"
log = "0.4"
pretty_env_logger = "0.4"
urlencoding = "1"