cargo-features = ["strip"]

[package]
name = "providence"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = "0.10"
base64 = "0.13"
serde = "1"
serde_derive = "1"
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = { version = "0.4", features = ["serde"] }
simple_endian = "0.2"
log = "0.4"
pretty_env_logger = "0.4"
urlencoding = "1"
amiquip = { version = "0.4", default-features = false }
prost = "0.9"
prost-types = "0.9"
x509-parser = "0.12"
oid-registry = "0.2"
der-parser = "6"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread"] }
lazy_static = "1.4"

[build-dependencies]
prost-build = { version = "0.9" }

[profile.release]
opt-level = "z"
lto = true
strip = true